added requirements, and reomed sepia for new noise funct

--- a/Final_PDI/procesamiento_imagenes/templates/procesamiento_imagenes/show_image.html
+++ b/Final_PDI/procesamiento_imagenes/templates/procesamiento_imagenes/show_image.html
@@ -50,11 +50,11 @@
                     Mayor definción</p>
             </div>
             <div class="flex flex-col items-center">
-                <img src="{{ sepia }}" alt="Sepia"
+                <img src="{{ diferencias_resaltadas }}" alt="Sepia"
                     class="rounded-lg shadow-lg transform transition duration-500 hover:scale-105">
                 <p
                     class="mt-2 bg-blue-600 text-s font-semibold px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800">
-                    Sepia</p>
+                    Menos Ruido 2</p>
             </div>
             <div class="flex flex-col items-center">
                 <img src="{{ BGR }}" alt="BGR"
